@@ -235,7 +235,7 @@ UPGRADE NOTES - PHP X.Y
 
      f. New global constants
 
-       - 
+       - JSON_UNESCAPED_SLASHES
 
      g. New classes
 
