@@ -59,6 +59,7 @@ extern zend_class_entry *php_json_serializable_ce;
 #define PHP_JSON_HEX_QUOT	(1<<3)
 #define PHP_JSON_FORCE_OBJECT	(1<<4)
 #define PHP_JSON_NUMERIC_CHECK	(1<<5)
+#define PHP_JSON_UNESCAPED_SLASHES	(1<<6)
 
 /* Internal flags */
 #define PHP_JSON_OUTPUT_ARRAY	0
